--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.11.0",
     "swiper": "^11.2.9",
     "tailwind-merge": "^3.4.0",
+    "vevet": "^5.6.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
